--- a/.pipelines/stages/jobs/steps/capi-win-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-win-step.yml
@@ -138,7 +138,7 @@ steps:
       Pattern: '*genai*.dll'
 
   - task: BinSkim@4
-    displayName: 'Run BinSkim'
+    displayName: 'Run BinSkim - CHRISD'
     inputs:
       AnalyzeTargetGlob: '$(Build.Repository.LocalPath)\**\*genai.dll'
     continueOnError: true
@@ -150,7 +150,7 @@ steps:
       targetPath: '$(Build.Repository.LocalPath)\build\$(ep)\$(os)-$(arch)\package'
 
   - task: PublishSymbols@2
-    displayName: 'Publish Build Symbols'
+    displayName: 'Publish Build Symbols - CHRISD'
     condition: and(succeeded(), eq(variables['build_config'], 'relwithdebinfo'))
     inputs:
       SymbolsFolder: '$(Build.Repository.LocalPath)\build\$(ep)\$(os)-$(arch)\RelWithDebInfo\'
