Fix some CI failures

--- a/examples/c/CMakeLists.txt
+++ b/examples/c/CMakeLists.txt
@@ -12,6 +12,15 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(nlohmann_json)
 
+# Download and make available CLI11
+include(FetchContent)
+FetchContent_Declare(
+  CLI11
+  GIT_REPOSITORY https://github.com/CLIUtils/CLI11.git
+  GIT_TAG        v2.6.1      # Or update to latest release
+)
+FetchContent_MakeAvailable(CLI11)
+
 option(USE_CXX "Invoke the C++ example" ON)
 option(MODEL_CHAT "Build the Model Chat example" OFF)
 option(MODEL_QA "Build the Model Q&A example" OFF)
@@ -70,28 +79,33 @@ if(MODEL_CHAT)
   add_executable(model_chat ${EXAMPLES_SOURCE_DIR}/model_chat.cpp ${EXAMPLES_SOURCE_DIR}/common.cpp)
   prepare_executable(model_chat)
   target_link_libraries(model_chat PRIVATE nlohmann_json::nlohmann_json)
+  target_link_libraries(model_chat PRIVATE CLI11::CLI11)
 endif()
 
 if(MODEL_QA)
   add_executable(model_qa ${EXAMPLES_SOURCE_DIR}/model_qa.cpp ${EXAMPLES_SOURCE_DIR}/common.cpp)
   prepare_executable(model_qa)
   target_link_libraries(model_qa PRIVATE nlohmann_json::nlohmann_json)
+  target_link_libraries(model_qa PRIVATE CLI11::CLI11)
 endif()
 
 if(MODEL_VISION)
   add_executable(model_vision ${EXAMPLES_SOURCE_DIR}/model_vision.cpp ${EXAMPLES_SOURCE_DIR}/common.cpp)
   prepare_executable(model_vision)
   target_link_libraries(model_vision PRIVATE nlohmann_json::nlohmann_json)
+  target_link_libraries(model_vision PRIVATE CLI11::CLI11)
 endif()
 
 if(PHI4-MM)
   add_executable(phi4-mm ${CMAKE_SOURCE_DIR}/src/phi4-mm.cpp ${EXAMPLES_SOURCE_DIR}/common.cpp)
   prepare_executable(phi4-mm)
   target_link_libraries(phi4-mm PRIVATE nlohmann_json::nlohmann_json)
+  target_link_libraries(phi4-mm PRIVATE CLI11::CLI11)
 endif()
 
 if(WHISPER)
   add_executable(whisper ${CMAKE_SOURCE_DIR}/src/whisper.cpp ${EXAMPLES_SOURCE_DIR}/common.cpp)
   prepare_executable(whisper)
   target_link_libraries(whisper PRIVATE nlohmann_json::nlohmann_json)
+  target_link_libraries(whisper PRIVATE CLI11::CLI11)
 endif()
