--- a/.pipelines/stages/jobs/nuget-validation-job.yml
+++ b/.pipelines/stages/jobs/nuget-validation-job.yml
@@ -143,14 +143,14 @@ jobs:
       HuggingFaceRepo: 'microsoft/Phi-3-mini-4k-instruct-onnx'
       LocalFolder: 'phi3-mini'
       RepoFolder: $(prebuild_phi3_mini_model_folder)
-      WorkingDirectory: '$(Build.Repository.LocalPath)/examples/csharp/HelloPhi'
+      WorkingDirectory: '$(Build.Repository.LocalPath)/examples/csharp/ModelChat'
       HuggingFaceToken: $(HF_TOKEN)
       os: ${{ parameters.os }}
 
   - template: steps/nuget-validation-step.yml
     parameters:
-      CsprojFolder: "examples/csharp/HelloPhi"
-      CsprojName: "HelloPhi"
+      CsprojFolder: "examples/csharp/ModelChat"
+      CsprojName: "ModelChat"
       CsprojConfiguration: $(csproj_configuration)
       LocalFolder: 'phi3-mini'
       ModelFolder: $(prebuild_phi3_mini_model_folder)
@@ -160,14 +160,14 @@ jobs:
       HuggingFaceRepo: 'microsoft/Phi-3.5-vision-instruct-onnx'
       LocalFolder: 'phi3.5-vision'
       RepoFolder: $(prebuild_phi3_5_vision_model_folder)
-      WorkingDirectory: '$(Build.Repository.LocalPath)/examples/csharp/HelloPhi3V'
+      WorkingDirectory: '$(Build.Repository.LocalPath)/examples/csharp/ModelVision'
       HuggingFaceToken: $(HF_TOKEN)
       os: ${{ parameters.os }}
 
   - template: steps/nuget-validation-step.yml
     parameters:
-      CsprojFolder: "examples/csharp/HelloPhi3V"
-      CsprojName: "HelloPhi3V"
+      CsprojFolder: "examples/csharp/ModelVision"
+      CsprojName: "ModelVision"
       CsprojConfiguration: $(csproj_configuration)
       LocalFolder: 'phi3.5-vision'
       ModelFolder: $(prebuild_phi3_5_vision_model_folder)
@@ -177,14 +177,14 @@ jobs:
       HuggingFaceRepo: 'microsoft/Phi-4-multimodal-instruct-onnx'
       LocalFolder: 'phi4-mm'
       RepoFolder: $(prebuild_phi4_mm_model_folder)
-      WorkingDirectory: '$(Build.Repository.LocalPath)/examples/csharp/HelloPhi4MM'
+      WorkingDirectory: '$(Build.Repository.LocalPath)/examples/csharp/ModelChat4MM'
       HuggingFaceToken: $(HF_TOKEN)
       os: ${{ parameters.os }}
 
   - template: steps/nuget-validation-step.yml
     parameters:
-      CsprojFolder: "examples/csharp/HelloPhi4MM"
-      CsprojName: "HelloPhi4MM"
+      CsprojFolder: "examples/csharp/ModelChat4MM"
+      CsprojName: "ModelChat4MM"
       CsprojConfiguration: $(csproj_configuration)
       LocalFolder: 'phi4-mm'
       ModelFolder: $(prebuild_phi4_mm_model_folder)
