--- a/.github/workflows/win-cpu-arm64-build.yml
+++ b/.github/workflows/win-cpu-arm64-build.yml
@@ -100,11 +100,24 @@ jobs:
       - name: Run the Python Tests
         run: |
           python test/python/test_onnxruntime_genai.py --cwd "test\python" --test_models "test\test_models"
-
+     
       - name: Build the C# API and Run the C# Tests
         run: |
           cd test\csharp
           dotnet test /p:NativeBuildOutputDir="$env:GITHUB_WORKSPACE\$env:binaryDir\Release" /p:OrtLibDir="$env:GITHUB_WORKSPACE\ort\lib"
+
+      - name: Build the C# Examples
+        run: |
+          cd examples\csharp\ModelChat
+          dotnet build -c Release
+          cd ..\ModelVision
+          dotnet build -c Release
+          cd ..\HelloPhi4MM
+          dotnet build -c Release
+
+      - name: Test the C# LLM Example with Tool Calling
+          python3 test\python\special_tokens.py -p test\test_models\qwen-2.5-0.5b\int4\cpu\tokenizer.json -s "<tool_call>" -e "</tool_call>"
+          .\examples\csharp\ModelChat\bin\Release\net8.0\ModelChat.exe -m test\test_models\qwen-2.5-0.5b\int4\cpu\ -e cpu --response_format lark_grammar --tools_file test\test_models\tool-definitions\weather.json --tool_call_start "<tool_call>" --tool_call_end "</tool_call>" --user_prompt "What is the weather in Redmond, WA?" --tool_output --non_interactive --verbose
 
       - name: Build the Java API and Run the Java Tests
         run: |
