--- a/.github/workflows/win-cpu-arm64-build.yml
+++ b/.github/workflows/win-cpu-arm64-build.yml
@@ -89,6 +89,11 @@ jobs:
           cmake --build --preset windows_arm64_cpu_release --parallel
           cmake --build --preset windows_arm64_cpu_release --target PyPackageBuild
 
+      - name: Build C/C++ examples with CMake
+        run: |
+          cmake -S examples\c -B examples\c\build -G "Visual Studio 17 2022" -A ARM64 -DMODEL_QA=ON -DMODEL_CHAT=ON -DMODEL_VISION=ON -DPHI4-MM=ON -DWHISPER=ON -DORT_GENAI_INCLUDE_DIR=src -DORT_GENAI_LIB_DIR=build\Release
+          cmake --build examples\c\build --config Release
+
       - name: Install the Python Wheel and Test Dependencies
         run: |
           # Uninstalling LLVM/Clang as it is no longer required and causes issues with numpy installation
@@ -116,6 +121,7 @@ jobs:
           dotnet build -c Release
 
       - name: Test the C# LLM Example with Tool Calling
+        run: |
           python3 test\python\special_tokens.py -p test\test_models\qwen-2.5-0.5b\int4\cpu\tokenizer.json -s "<tool_call>" -e "</tool_call>"
           .\examples\csharp\ModelChat\bin\Release\net8.0\ModelChat.exe -m test\test_models\qwen-2.5-0.5b\int4\cpu\ -e cpu --response_format lark_grammar --tools_file test\test_models\tool-definitions\weather.json --tool_call_start "<tool_call>" --tool_call_end "</tool_call>" --user_prompt "What is the weather in Redmond, WA?" --tool_output --non_interactive --verbose
 
