--- a/.github/workflows/win-cuda-x64-build.yml
+++ b/.github/workflows/win-cuda-x64-build.yml
@@ -87,6 +87,11 @@ jobs:
           cmake --build --preset windows_x64_cuda_release --parallel
           cmake --build --preset windows_x64_cuda_release --target PyPackageBuild
 
+      - name: Build C/C++ examples with CMake
+        run: |
+          cmake -S examples\c -B examples\c\build -G "Visual Studio 17 2022" -DMODEL_QA=ON -DMODEL_CHAT=ON -DMODEL_VISION=ON -DPHI4-MM=ON -DWHISPER=ON -DORT_GENAI_INCLUDE_DIR=src -DORT_GENAI_LIB_DIR=build\Release
+          cmake --build examples\c\build --config Release
+
       - name: Add CUDA to PATH
         run: |
           echo "${{ env.cuda_dir }}\\v${{ env.cuda_version }}\\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
@@ -125,6 +130,7 @@ jobs:
           dotnet build -c Release
 
       - name: Test the C# LLM Example with Tool Calling
+        run: |
           python3 test\python\special_tokens.py -p test\test_models\qwen-2.5-0.5b\int4\cuda\tokenizer.json -s "<tool_call>" -e "</tool_call>"
           .\examples\csharp\ModelChat\bin\Release\net8.0\ModelChat.exe -m test\test_models\qwen-2.5-0.5b\int4\cuda\ -e cuda --response_format lark_grammar --tools_file test\test_models\tool-definitions\weather.json --tool_call_start "<tool_call>" --tool_call_end "</tool_call>" --user_prompt "What is the weather in Redmond, WA?" --tool_output --non_interactive --verbose
 
