--- a/.github/workflows/win-cuda-x64-build.yml
+++ b/.github/workflows/win-cuda-x64-build.yml
@@ -87,10 +87,6 @@ jobs:
           cmake --build --preset windows_x64_cuda_release --parallel
           cmake --build --preset windows_x64_cuda_release --target PyPackageBuild
 
-      - name: Build the Java API and Run the Java Tests
-        run: |
-          python3 build.py --config=Release --build_dir $env:binaryDir --build_java --parallel
-
       - name: Add CUDA to PATH
         run: |
           echo "${{ env.cuda_dir }}\\v${{ env.cuda_version }}\\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
@@ -101,6 +97,10 @@ jobs:
           python -m pip install -r test\python\cuda\torch\requirements.txt
           python -m pip install -r test\python\cuda\ort\requirements.txt
           python -m pip install (Get-ChildItem ("$env:binaryDir\wheel\*.whl")) --no-deps
+
+      - name: Build the Java API and Run the Java Tests
+        run: |
+          python build.py --config=Release --build_dir $env:binaryDir --build_java --parallel
 
       - name: Run the Python Tests
         run: |
@@ -130,7 +130,7 @@ jobs:
 
       - name: Test the C# LLM Example with Tool Calling
         run: |
-          python3 test\python\special_tokens.py -p test\test_models\qwen-2.5-0.5b\int4\cuda\tokenizer.json -s "<tool_call>" -e "</tool_call>"
+          python test\python\special_tokens.py -p test\test_models\qwen-2.5-0.5b\int4\cuda\tokenizer.json -s "<tool_call>" -e "</tool_call>"
           .\examples\csharp\ModelChat\bin\Release\net8.0\ModelChat.exe -m test\test_models\qwen-2.5-0.5b\int4\cuda\ -e cuda --response_format lark_grammar --tools_file test\test_models\tool-definitions\weather.json --tool_call_start "<tool_call>" --tool_call_end "</tool_call>" --user_prompt "What is the weather in Redmond, WA?" --tool_output --non_interactive --verbose
 
       - name: Prepend CUDA to PATH and Run tests
