--- a/.github/workflows/win-directml-x64-build.yml
+++ b/.github/workflows/win-directml-x64-build.yml
@@ -107,16 +107,16 @@ jobs:
           cmake --build --preset windows_x64_directml_release --parallel
           cmake --build --preset windows_x64_directml_release --target PyPackageBuild
 
-      - name: Build the Java API and Run the Java Tests
-        run: |
-          python3 build.py --config=Release --build_dir $env:binaryDir --build_java --parallel
-
       - name: Install the Python Wheel and Test Dependencies
         run: |
           python -m pip install -r test\python\requirements.txt
           python -m pip install -r test\python\directml\torch\requirements.txt
           python -m pip install -r test\python\directml\ort\requirements.txt
           python -m pip install (Get-ChildItem ("$env:binaryDir\wheel\*.whl")) --no-deps
+
+      - name: Build the Java API and Run the Java Tests
+        run: |
+          python build.py --config=Release --build_dir $env:binaryDir --build_java --parallel
 
       - name: Run the Python Tests
         run: |
