--- a/.github/workflows/win-cpu-arm64-build.yml
+++ b/.github/workflows/win-cpu-arm64-build.yml
@@ -93,7 +93,9 @@ jobs:
         run: |
           # Uninstalling LLVM/Clang as it is no longer required and causes issues with numpy installation
           choco uninstall llvm --yes
-          python -m pip install "numpy<2" coloredlogs flatbuffers packaging protobuf sympy pytest
+          python -m pip install -r test\python\requirements.txt --user
+          python -m pip install -r test\python\cpu\torch\requirements.txt --user
+          python -m pip install -r test\python\cpu\ort\requirements.txt --user
           python -m pip install onnxruntime-qnn
           python -m pip install (Get-ChildItem ("$env:binaryDir\wheel\*.whl")) --no-deps
 
