--- a/examples/c/CMakeLists.txt
+++ b/examples/c/CMakeLists.txt
@@ -50,6 +50,10 @@ endif()
 file(GLOB ort_genai_libs "${ORT_GENAI_LIB_DIR}/*")
 
 message(STATUS "ORT_GENAI_LIB_DIR: ${ORT_GENAI_LIB_DIR}")
+message(STATUS "ORT GenAI libs found:")
+foreach(DEP_FILE ${ort_genai_libs})
+  message(STATUS "  ${DEP_FILE}")
+endforeach()
 
 function(prepare_executable executable)
   target_link_directories(${executable} PRIVATE ${ORT_GENAI_LIB_DIR})
@@ -97,14 +101,14 @@ if(MODEL_VISION)
 endif()
 
 if(PHI4-MM)
-  add_executable(phi4-mm ${CMAKE_SOURCE_DIR}/src/phi4-mm.cpp ${EXAMPLES_SOURCE_DIR}/common.cpp)
+  add_executable(phi4-mm ${EXAMPLES_SOURCE_DIR}/phi4-mm.cpp ${EXAMPLES_SOURCE_DIR}/common.cpp)
   prepare_executable(phi4-mm)
   target_link_libraries(phi4-mm PRIVATE nlohmann_json::nlohmann_json)
   target_link_libraries(phi4-mm PRIVATE CLI11::CLI11)
 endif()
 
 if(WHISPER)
-  add_executable(whisper ${CMAKE_SOURCE_DIR}/src/whisper.cpp ${EXAMPLES_SOURCE_DIR}/common.cpp)
+  add_executable(whisper ${EXAMPLES_SOURCE_DIR}/whisper.cpp ${EXAMPLES_SOURCE_DIR}/common.cpp)
   prepare_executable(whisper)
   target_link_libraries(whisper PRIVATE nlohmann_json::nlohmann_json)
   target_link_libraries(whisper PRIVATE CLI11::CLI11)
