--- a/test/python/cpu/ort/requirements.txt
+++ b/test/python/cpu/ort/requirements.txt
@@ -1,1 +1,2 @@
-onnxruntime==1.23.0
+-i https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/ORT-Nightly/pypi/simple/
+onnxruntime==1.25.0.dev20260126001
