--- a/test/python/directml/ort/requirements.txt
+++ b/test/python/directml/ort/requirements.txt
@@ -1,1 +1,2 @@
-onnxruntime-directml==1.23.2
+-i https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/ORT-Nightly/pypi/simple/
+onnxruntime-directml==1.25.0.dev20260125001
