--- a/.github/workflows/win-directml-x64-build.yml
+++ b/.github/workflows/win-directml-x64-build.yml
@@ -55,7 +55,7 @@ jobs:
         run: |
           $resp = Invoke-RestMethod "${{ env.ORT_NIGHTLY_REST_API }}"
           # $ORT_NIGHTLY_VERSION = $resp.value[0].versions[0].normalizedVersion
-          $ORT_NIGHTLY_VERSION = "1.23.0"
+          $ORT_NIGHTLY_VERSION = "1.25.0-dev-20260125-0556-727db0d3dc"
 
           Write-Host "$ORT_NIGHTLY_VERSION"
           "ORT_NIGHTLY_VERSION=$ORT_NIGHTLY_VERSION" | Out-File -FilePath $env:GITHUB_ENV -Append
