--- a/.github/workflows/linux-cpu-x64-build.yml
+++ b/.github/workflows/linux-cpu-x64-build.yml
@@ -39,9 +39,10 @@ jobs:
         with:
           gradle-version: '8.6'
 
-      - uses: actions/setup-python@v5
+      - uses: actions/setup-python@v6
         with:
-          python-version: '3.11'
+          python-version: '3.11.x'
+          architecture: 'x64'
 
       - uses: microsoft/onnxruntime-github-actions/setup-build-tools@v0.0.8
         with:
