Include linux builds in the foundry ort-genai package

--- a/.pipelines/stages/jobs/custom-nuget-packaging-job.yml
+++ b/.pipelines/stages/jobs/custom-nuget-packaging-job.yml
@@ -38,6 +38,12 @@ jobs:
       ArtifactName: onnxruntime-genai-osx-cpu-arm64-capi
       TargetPath: '$(Build.BinariesDirectory)/artifact-downloads'
 
+  - template: steps/utils/flex-download-pipeline-artifact.yml
+    parameters:
+      StepName: 'Download linux-x64 capi Artifacts'
+      ArtifactName: onnxruntime-genai-linux-cuda-x64-capi
+      TargetPath: '$(Build.BinariesDirectory)/artifact-downloads'
+
   - checkout: self
     path: onnxruntime-genai
     clean: true
@@ -69,6 +75,8 @@ jobs:
           $rid = "osx-x64"
         } elseif ($a -like "*osx-arm64*") {
           $rid = "osx-arm64"
+        } elseif ($a -like "*linux-x64*") {
+          $rid = "linux-x64"
         } else {
           Write-Host "Unknown artifact name" $a
           return
@@ -113,12 +121,13 @@ jobs:
       $win_arm64_artifact_path = (Get-ChildItem -Path '$(Build.BinariesDirectory)/artifact-downloads/win-arm64/')[0].FullName
       $osx_x64_artifact_path = (Get-ChildItem -Path '$(Build.BinariesDirectory)/artifact-downloads/osx-x64/')[0].FullName
       $osx_arm64_artifact_path = (Get-ChildItem -Path '$(Build.BinariesDirectory)/artifact-downloads/osx-arm64/')[0].FullName
+      $linux_x64_artifact_path = (Get-ChildItem -Path '$(Build.BinariesDirectory)/artifact-downloads/linux-x64/')[0].FullName
 
       Write-Host "Win x64 artifact path " $win_x64_artifact_path
       Write-Host "Win arm64 artifact path " $win_arm64_artifact_path
       Write-Host "OSX x64 artifact path " $osx_x64_artifact_path
       Write-Host "OSX arm64 artifact path " $osx_arm64_artifact_path
-
+      Write-Host "Linux x64 artifact path " $linux_x64_artifact_path
       $ort_package_version = $versioned_name.Substring($ort_nuget_package_name.Length + 1, $versioned_name.Length - $ort_nuget_package_name.Length - 1 - ".nupkg".Length)
       python.exe $(Build.Repository.LocalPath)\tools\nuget\generate_nuspec_for_custom_nuget.py `
         --package_name $genai_nuget_package_name `
@@ -131,6 +140,7 @@ jobs:
         --win_arm64 $win_arm64_artifact_path `
         --osx_x64 $osx_x64_artifact_path `
         --osx_arm64 $osx_arm64_artifact_path `
+        --linux_x64 $linux_x64_artifact_path `
         --commit_id $(Build.SourceVersion)
 
       cat $(Build.Repository.LocalPath)\nuget\$genai_nuget_package_name.nuspec
